--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "motion-analysis",
-  "version": "0.1.0",
+  "name": "strikesense",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
-    "setup:python": "node -e \"console.log('Python venv will be auto-created by API on first call')\"",
     "dev": "next dev",
-    "dev:all": "npm run setup:python && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
@@ -13,7 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
-    "fluent-ffmpeg": "^2.1.3",
+    "@supabase/supabase-js": "^2.39.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "react": "19.2.0",
@@ -23,7 +21,6 @@
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
-    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
