--- a/Dockerfile.runpod
+++ b/Dockerfile.runpod
@@ -39,11 +39,8 @@ RUN pip install --no-cache-dir supabase httpx
 # Pre-download YOLO model for faster cold starts
 RUN python -c "from ultralytics import YOLO; YOLO('yolov8n.pt'); print('YOLO model cached')"
 
-# Copy Python application code
+# Copy Python application code (includes models/ folder)
 COPY python/ ./
-
-# Copy models directory
-COPY models/ ./models/
 
 # Environment
 ENV PYTHONUNBUFFERED=1
