--- a/Dockerfile.runpod
+++ b/Dockerfile.runpod
@@ -16,7 +16,7 @@ FROM runpod/pytorch:2.1.0-py3.10-cuda11.8.0-devel-ubuntu22.04
 
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies (including MediaPipe requirements)
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ffmpeg \
     libgl1-mesa-glx \
@@ -24,6 +24,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libsm6 \
     libxext6 \
     libxrender-dev \
+    libxcb1 \
+    libx11-6 \
+    libgomp1 \
+    libusb-1.0-0 \
     curl \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
@@ -35,6 +39,13 @@ RUN pip install --no-cache-dir --upgrade pip && \
 
 # Install additional packages for Supabase upload
 RUN pip install --no-cache-dir supabase httpx
+
+# Reinstall mediapipe with proper dependencies (fix for 'solutions' not found)
+RUN pip uninstall -y mediapipe && \
+    pip install --no-cache-dir mediapipe==0.10.9
+
+# Verify mediapipe installation
+RUN python -c "import mediapipe as mp; print('MediaPipe version:', mp.__version__); print('Solutions:', hasattr(mp, 'solutions'))"
 
 # Pre-download YOLO model for faster cold starts
 RUN python -c "from ultralytics import YOLO; YOLO('yolov8n.pt'); print('YOLO model cached')"
