--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^9.0.1",
     "three": "^0.182.0"
   },
   "devDependencies": {
