--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,6 +9,9 @@ on:
       - 'python/**'
       - '.github/workflows/docker-build.yml'
 
+env:
+  DOCKER_BUILDKIT: 1
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -17,18 +20,26 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile.runpod
           push: true
           tags: vigneshwarangpxlbrain/strikesense-worker:latest
+          cache-from: type=registry,ref=vigneshwarangpxlbrain/strikesense-worker:buildcache
+          cache-to: type=registry,ref=vigneshwarangpxlbrain/strikesense-worker:buildcache,mode=max
+          platforms: linux/amd64
+
+      - name: Clean up
+        run: |
+          docker system prune -af --volumes
+          docker builder prune -af
