--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
-    "@sparticuz/chromium-min": "^143.0.0",
     "@supabase/supabase-js": "^2.39.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "openai": "^6.15.0",
-    "puppeteer-core": "^24.34.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^9.0.1",
