--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.7",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@sparticuz/chromium-min": "^143.0.0",
