--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^9.0.1",
+    "svix": "^1.84.1",
     "three": "^0.182.0"
   },
   "devDependencies": {
