--- a/Dockerfile.runpod
+++ b/Dockerfile.runpod
@@ -40,15 +40,21 @@ RUN pip install --no-cache-dir --upgrade pip && \
 # Install additional packages for Supabase upload
 RUN pip install --no-cache-dir supabase httpx
 
-# Reinstall mediapipe with proper dependencies (fix for 'solutions' not found)
+# Reinstall mediapipe with proper dependencies
 RUN pip uninstall -y mediapipe && \
-    pip install --no-cache-dir mediapipe==0.10.9
+    pip install --no-cache-dir mediapipe==0.10.14
 
-# Verify mediapipe installation
-RUN python -c "import mediapipe as mp; print('MediaPipe version:', mp.__version__); print('Solutions:', hasattr(mp, 'solutions'))"
+# Verify mediapipe Tasks API installation (0.10.x uses Tasks API, not solutions)
+RUN python -c "import mediapipe as mp; from mediapipe.tasks.python import vision; print('MediaPipe version:', mp.__version__); print('Tasks API:', 'OK')"
 
 # Pre-download YOLO model for faster cold starts
 RUN python -c "from ultralytics import YOLO; YOLO('yolov8n.pt'); print('YOLO model cached')"
+
+# Pre-download MediaPipe pose landmarker model
+RUN mkdir -p /app/models && \
+    curl -L -o /app/models/pose_landmarker_heavy.task \
+    "https://storage.googleapis.com/mediapipe-models/pose_landmarker/pose_landmarker_heavy/float16/1/pose_landmarker_heavy.task" && \
+    echo "Pose landmarker model downloaded"
 
 # Copy Python application code (includes models/ folder)
 COPY python/ ./
@@ -61,5 +67,5 @@ ENV PYTHONPATH=/app
 CMD ["python", "-u", "handler.py"]
 
 # Deployment Version Tracker
-LABEL org.opencontainers.image.version="1.2.0-fix-gpu-tracking"
-LABEL org.opencontainers.image.last_modified="2026-01-08"
+LABEL org.opencontainers.image.version="1.3.0-mediapipe-tasks-api"
+LABEL org.opencontainers.image.last_modified="2026-01-15"
