--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-three/fiber": "^9.4.2",
     "@sparticuz/chromium-min": "^143.0.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "openai": "^6.15.0",
