--- a/Dockerfile.runpod
+++ b/Dockerfile.runpod
@@ -40,25 +40,20 @@ RUN pip install --no-cache-dir --upgrade pip && \
 # Install additional packages for Supabase upload
 RUN pip install --no-cache-dir supabase httpx
 
-# Reinstall mediapipe with proper dependencies
+# Install MediaPipe 0.10.9 - last version with stable solutions API
+# Note: 0.10.14 uses Tasks API which is incompatible with track.py's mp.solutions.pose usage
 RUN pip uninstall -y mediapipe && \
-    pip install --no-cache-dir mediapipe==0.10.14
+    pip install --no-cache-dir mediapipe==0.10.9
 
-# Verify mediapipe Tasks API installation (0.10.x uses Tasks API, not solutions)
-RUN python -c "import mediapipe as mp; from mediapipe.tasks.python import vision; print('MediaPipe version:', mp.__version__); print('Tasks API:', 'OK')"
+# Verify mediapipe solutions API works (used by track.py)
+RUN python -c "import mediapipe as mp; print('MediaPipe version:', mp.__version__); pose = mp.solutions.pose.Pose(); print('Solutions API: OK')"
 
 # Pre-download YOLO model for faster cold starts
 RUN python -c "from ultralytics import YOLO; YOLO('yolov8n.pt'); print('YOLO model cached')"
 
-# Pre-download MediaPipe pose landmarker model
-RUN mkdir -p /app/models && \
-    curl -L -o /app/models/pose_landmarker_heavy.task \
-    "https://storage.googleapis.com/mediapipe-models/pose_landmarker/pose_landmarker_heavy/float16/1/pose_landmarker_heavy.task" && \
-    echo "Pose landmarker model downloaded"
-
 # CACHE BUSTER - Forces fresh copy of Python code every build
-# Change this value to force a rebuild: 2026-01-15T20:30:00
-ARG CACHEBUST=1
+# Change this value to force a rebuild: 2026-01-22T19:00:00
+ARG CACHEBUST=2
 RUN echo "Cache bust: $CACHEBUST"
 
 # Copy Python application code (includes models/ folder)
@@ -72,5 +67,5 @@ ENV PYTHONPATH=/app
 CMD ["python", "-u", "handler.py"]
 
 # Deployment Version Tracker
-LABEL org.opencontainers.image.version="1.3.0-mediapipe-tasks-api"
-LABEL org.opencontainers.image.last_modified="2026-01-15"
+LABEL org.opencontainers.image.version="1.4.0-mediapipe-solutions-api"
+LABEL org.opencontainers.image.last_modified="2026-01-22"
